--- a/DownloadApk/plantsvszombies22.4.7.html
+++ b/DownloadApk/plantsvszombies22.4.7.html
@@ -44,7 +44,7 @@
 	  <div class="dacy">
 		<h8><b>特别感谢</b></h8>
 		<br><br>
-		<p class="serif">1.小空白的rton加密处理<br>2.煮钰的大部分贴图美化<br>3.煮钰及无名的某周刊大爷提供的部分关卡<br>4.具体还请进入游戏查看</p>
+		<p class="serif">1.小空白的rton加密处理,没事的可以进他的群:1046385627<br>2.煮钰的大部分贴图美化<br>3.煮钰及无名的某周刊大爷提供的部分关卡<br>4.具体还请进入游戏查看</p>
 	  </div>
 	  <br><br>
 
