--- a/DownloadApk/plantsvszombies22.4.7.html
+++ b/DownloadApk/plantsvszombies22.4.7.html
@@ -52,7 +52,7 @@
 		<h8><b>应用简介及特别提醒</b></h8>
 		<br><br>
 		<p class="serif">简介:《植物大战僵尸2》是《植物大战僵尸》的全新续作，于2013年夏季发布。在沿袭了经典的植物防御僵尸玩法的基础上，新增了植物能量、手势道具、僵尸设定图及游戏关卡的选择场景。玩家还将跟随剧情设定穿梭时空，体验到各个世界的新鲜元素。  游戏同时集成了即时战略、塔防御战和卡片收集等要素，玩家控制植物抵御僵尸的进攻，保护这片植物园。这款游戏要求玩家既有是大脑的智慧，又有小脑的反应。在有了正确的战略思想之后，还要靠战术将战略实现出来。战术范围包括很广，植物的搭配、战斗时的阵型、植物与僵尸相遇时是战是防这都属于战术的范畴。 植物大战僵尸2的战场转换于各个时空中，如神秘埃及、海盗港湾、狂野西部、功夫世界、未来世界、黑暗时代、巨浪沙滩、冰河世纪、天空之城、失落之城、 摇滚年代、恐龙危机、摩登世界、蒸汽时代、复兴时代等。游戏加入了大量道具，提升了趣味性。<br>
-		  <a  style="color:#DC143C">提醒:自创关卡入口为埃及世界及蒸汽时代，并把现代换为混乱</a><br>
+		  <a  style="color:#DC143C">提醒:自创关卡入口为埃及世界及摇滚世界，并把现代换为混乱</a><br>
 		  <a  style="color:#FFA500">百度网盘提取码:ulk3</a>
 		</p>
 	  </div>
