--- a/DownloadApk/SoModTool.html
+++ b/DownloadApk/SoModTool.html
@@ -51,7 +51,7 @@
 	  <div class="dacy">
 		<h8><b>特别提醒</b></h8>
 		<br><br>
-		<p class="serif">本软件最低系统要求为安装5.0.<br>
+		<p class="serif">本软件最低系统要求为Android5.0<br>
 		本软件所需权限:①此应用可显示在其他应用上方②读取手机状态和身份③拥有完全的网络访问权限④从您的媒体收藏中读取位置信息⑤修改或删除您共享存储空间中的内容⑥请求安装文件包⑦读取您共享存储空间中的内容
 		 <br> <a  style="color:#FFA500">软件服务条款:</a>
 		<a  style="color:#DC143C">本服务条款是用户（您）与SmallPea之间的协议。<br> 1.1 重要须知： SmallPea在此特别提醒，用户（您）欲访问和使用SmallPea的所有产品，必须事先认真阅读本服务条款中各条款， 包括免除或者限制SmallPea责任的免责条款及对用户的权利限制。请您审阅并接受或不接受本服务条款（未成年人审阅时应得到法定监护人的陪同）。如您不同意本服务条款及/或随时对其的修改，您应不使用或主动取消SmallPea提供的服务。您的使用行为将被视为您对本服务条款全部的完全接受，包括接受SmallPes对服务条款随时所做的任何修改。<br> 1.2 这些条款可由SmallPea随时更新，且毋须另行通知。<br> 1.3 本服务条款适用于SmallPea提供的各种服务，但当您使用SmallPea某一特定服务时，如该服务另有单独的服务条款、指引或规则，您应遵守本服务条款及SmallPea随时公布的与该服务相关的服务条款、指引或规则等。前述所有的指引和规则，均构成本服务条款的一部分。除非本服务条款另有其他明示规定，新推出的产品或服务、增加或强化目前本服务的任何新功能，均受到本服务条款之规范。<br>1.4 本软件仅为测试工具，请下载后24小时内尽快删除，若某人使用本工具造成严重后果均由该人承担，与SmallPea无关</a><br>
