--- a/DownloadApk/SoModTool.html
+++ b/DownloadApk/SoModTool.html
@@ -17,7 +17,7 @@
 	  <div class="title"><b>植物大战僵尸2一键修改工具</b></div>
 	  <div class="p">
 		版本：第三个公开版本 / 大小：不到7MB / 下载：+∞</div>
-	  <button <div="" class="down" onclick="window.location.href='https://smallpeashared.lanzous.com/i0Z9Dep0zla'">立即下载</button>
+	  <button <div="" class="down" onclick="window.location.href='https://smallpeashared.lanzoui.com/i0Z9Dep0zla'">立即下载</button>
 	</div>
 	<div class="show" style="margin-top: 0px;padding-left: 10px;padding-right: 10px;">
 	  <div class="dacy">
